--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/rss": "^4.0.0",
     "@astrojs/sitemap": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@rollup/rollup-win32-x64-msvc": "^4.54.0",
     "astro": "^4.15.0",
     "tailwindcss": "^3.4.0"
   },
