Add custom PerformanceChart component and visualize benchmark data in blog articles

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,13 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install
+
+      - name: Install Playwright
+        run: pnpm add -D @playwright/test@latest
+
+      - name: Install Playwright Browsers
+        run: pnpm exec playwright install --with-deps chromium
 
       - name: Build with Astro
         run: pnpm run build
