--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@astrojs/tailwind": "^5.1.0",
     "@rollup/rollup-win32-x64-msvc": "^4.54.0",
     "astro": "^4.15.0",
-    "tailwindcss": "^3.4.0"
+    "rehype-mermaid": "^3.0.0",
+    "tailwindcss": "^3.4.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.10",
     "sharp": "^0.33.0",
     "typescript": "^5.9.3"
