fix: resolve Vercel build failure and upgrade dependencies
- Remove @rollup/rollup-win32-x64-msvc from dependencies (Windows-only)
- Add it to optionalDependencies for platform-specific install
- Switch Vercel to use pnpm instead of npm
- Upgrade Astro 4 -> 5, MDX, sitemap, sharp
- Keep Tailwind v3 for @apply compatibility
- Fix Astro 5 content collection API (id vs slug)

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "framework": "astro",
-  "buildCommand": "npm run build",
+  "buildCommand": "pnpm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
+  "installCommand": "pnpm install",
   "headers": [
     {
       "source": "/fonts/(.*)",
