--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.0",
-    "@astrojs/rss": "^4.0.0",
-    "@astrojs/sitemap": "^3.1.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@rollup/rollup-win32-x64-msvc": "^4.54.0",
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/rss": "^4.0.15",
+    "@astrojs/sitemap": "^3.7.0",
+    "@astrojs/tailwind": "^5.1.5",
     "@vercel/analytics": "^1.6.1",
-    "astro": "^4.15.0",
+    "astro": "^5.16.11",
     "rehype-mermaid": "^3.0.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.19",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.6",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/typography": "^0.5.10",
-    "sharp": "^0.33.0",
+    "sharp": "^0.34.5",
     "typescript": "^5.9.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.55.2"
   }
 }
